Fixes issue where product price is being cropped on mobile, ticket DT-1333

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1767,6 +1767,12 @@ input[type="search"]::-webkit-search-decoration {
 			width: 100%;
 		}
 	}
+	.ecom-productlist-info h2, .ecom-featuredproducts-info h2,
+	.ecom-productlist-info .ecom-productlist-price,
+	.ecom-featuredproducts-info .ecom-productlist-price {
+		max-width: 100%;
+		display: block;
+	}
 	.widget.clicktocall a {
 		border: 1px solid darken(@font-swatch7-background-color, 20%);
 		padding: 6px 14px 8px 40px;
